@@ -1,5 +1,10 @@
 2002-01-05  John Levon  <moz@compsoc.man.ac.uk>
 
+	* module/oprofile.c: revert my broken stop fix,
+	  and fix the old (new) one
+ 
+2002-01-05  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/opd_kernel.c:
 	* dae/opd_proc.c:
 	* dae/opd_proc.h:
